# RiskAware-SafeRL-Construction-Inspector

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: experiment_protocol.md  final_safe_rl_system.md  perception_dataset.md  perception_production_training.md  perception_training.md  problem_formulation.md  project_completion_plan.md  stage_2c_scenario_integration.md  stage_2d_training_diagnostics.md  stage_3a_expert_baselines.md  stage_3a_results.md  stage_3b_results.md  stage_3b_safe_viewpoint_inspection.md  stage_3c_results.md  stage_3c_safe_curriculum_training.md  stage_3d_maskable_ppo.md  stage_3d_results.md  stage_3d_smoke_results.md  stage_3e_a_checkpoint_audit.md  stage_3e_a_deadlock_validation.md  stage_3e_a_smoke_results.md  stage_3e_b_calibration_results.md  stage_3e_b_counterfactual_lagrangian.md  stage_3e_b_smoke_results.md  stage_3e_b_transition_aligned_results.md  stage_3e_c_dual_critic_ppo_lagrangian.md  stage_3e_semantic_safety_shield.md  stage_4_webots_integration.md  stage_4a_runtime_validation.md  stage_4b2_live_webots_sensors.md  stage_4b2_runtime_evidence.md  stage_4b_observation_action_bridge.md  stage_4c1b_runtime_evidence.md  stage_4c_policy_inference_dry_run.md  stage_4d_professional_showcase.md  stage_5a3_closed_loop_inspection_mission.md  stage_5a_live_camera_acquisition.md
paper/: main.tex  references.bib
scripts/: audit_ppe_dataset.py  audit_viewpoint_feasibility.py  build_safe_curriculum.py  build_stage4b_live_world.py  build_stage4d_showcase.py  check_env.py  evaluate_model.py  (+35 more)
(+144 files in other folders)
