[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riskaware-saferrl"
version = "0.1.0"
description = "Risk-aware safe reinforcement learning benchmark for autonomous construction-site inspection."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {text = "MIT"}
authors = [
  {name = "Mahmoud Maher"}
]
dependencies = [
  "gymnasium>=1.2,<1.4",
  "stable-baselines3>=2.9,<3",
  "sb3-contrib>=2.9,<3",
  "torch>=2.8",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "matplotlib>=3.9,<4",
  "PyYAML>=6,<7",
  "tensorboard>=2.18",
  "rich>=13,<15"
]

[project.optional-dependencies]
vision = [
  "opencv-python>=4.10",
  "ultralytics>=8.4"
]
tracking = [
  "wandb>=0.19"
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.9",
  "pre-commit>=4"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]